Bug 331374 - Most apps are not listed
Summary: Most apps are not listed
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: discover (other bugs)
Version First Reported In: 2.1.70
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-21 11:17 UTC by Jonathan Riddell
Modified: 2015-03-04 16:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2014-02-21 11:17:48 UTC
Most apps are not listed in Muon Discover categories.  If I got to Games -> All only 2 games are shown (Magicor and Search & Rescue).  But if I search in the search bar for say kolf the game is correctly shown.

This is using Muon 2.1.70  package from Kubuntu 14.04 pre-release with libqapt 2.1.70.


Reproducible: Always
Comment 1 Harald Sitter 2014-02-22 22:12:16 UTC
Same in muon-installer, so this likely is a problem with the models.
Comment 2 Aleix Pol 2014-02-24 00:24:25 UTC
This can't be reproduced in 13.10.
I'll need some more information... :/
Comment 3 Harald Sitter 2014-02-24 08:36:47 UTC
Perhaps kdelibs broke?

offending commit is f9931c3d841ccb215a3bad14e0adc9dddb84091c

it introduces the following change:
-    QString categories = getField("Categories");
+    QStringList categories = QString(getField("Categories")).split(',', QString::SkipEmptyParts);

which in turn leads to the proxy model refusing to apply category filters:
muon-discover(12215) shouldFilter: "KPatience"
muon-discover(12215) shouldFilter: "Qt;KDE;Game;CardGame;"
muon-discover(12215) shouldFilter: CategoryFilter false

So, either that change was wrong to begin with, or kdelibs changed behavior. Categories as per the spec is a ; seperated list, however I seem to recall that the previous thing we used in KDE had , as seperator (might be utterly unrelated :P).  

The question is, does it actually return "Foo,Bar" on kdelibs 4.11, if so then I guess kdelibs should get fixed.
Comment 4 Harald Sitter 2014-02-24 08:37:22 UTC
ah, fwiw, the commit is in muon, I did not look for any related changes in kdelibs.
Comment 5 Aleix Pol 2014-02-27 02:00:52 UTC
Ah yes, that did change. I'll have to try it again then, maybe I looked the wrong way...?

PS: I should add tests for that!
Comment 6 Aleix Pol 2014-03-01 20:13:42 UTC
Git commit 635479c77dc76be3c3cfcd71aa405ef7fc128bc6 by Aleix Pol.
Committed on 01/03/2014 at 20:12.
Pushed by apol into branch '2.2'.

Split categories

This API changed over this summer, it wasn't properly
ported.

M  +2    -2    libmuon/backends/ApplicationBackend/Application.cpp

http://commits.kde.org/muon/635479c77dc76be3c3cfcd71aa405ef7fc128bc6
Comment 7 Jonathan Riddell 2015-03-04 16:29:08 UTC
Git commit 3a9d2769b6ce8b8ec1b25d5db2782dd004fe7d7d by Jonathan Riddell.
Committed on 04/03/2015 at 16:19.
Pushed by jriddell into branch 'Plasma/5.2'.

Add back patch for bug 331374
App categories do not work
Related: bug 344831

M  +2    -2    libmuon/backends/ApplicationBackend/Application.cpp

http://commits.kde.org/muon/3a9d2769b6ce8b8ec1b25d5db2782dd004fe7d7d