Split categories

This API changed over this summer, it wasn't properly
ported.

BUG: 331374